<resources>
    <string name="app_name">AppyProduct</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_wishlist">Wishlist</string>
    <string name="drawer_my_purchase">My Purchase</string>
    <string name="drawer_customer_service">Customer Service</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_footsteps">Footsteps</string>
    <string name="drawer_login">Tap To Login</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--My Profile-->
    <string name="my_profile_hint_old_password">Type your old password</string>
    <string name="my_profile_hint_new_password">Type your new password</string>
    <string name="my_profile_hint_retyped_password">Retype your new password</string>
    <string name="my_profile_hint_phone">Type a new phone number</string>
    <string name="my_profile_hint_email">Type a new email address</string>
    <string name="my_profile_hint_address">Type a new address</string>
    <string name="my_profile_hint_address_city">Town / City</string>
    <string name="my_profile_hint_address_state">State</string>
    <string name="my_profile_hint_address_code">Post Code</string>
    <string name="my_profile_change_password">Change password</string>
    <string name="my_profile_change_phone">Change phone number</string>
    <string name="my_profile_change_email">Change email address</string>
    <string name="my_profile_change_address">Change your address</string>

    <!--Login-->
    <string name="signup">Sign Up</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <!--Login Validation-->
    <string name="login_error_missing_phone">Please input your phone number.</string>
    <string name="login_error_missing_password">Please input your password.</string>
    <string name="login_error_invalid_password">Password must have at least 6 characters.</string>
    <string name="login_error_invalid_phone">Your phone number is not valid.</string>
    <string name="login_error_internal_server">We are sorry. The server encountered an internal error. Please try again later.</string>
    <string name="login_error">Your phone number and password are not correct. Please check them again.</string>
    <string name="login_success">Login success.</string>

    <!--Register Validation-->
    <string name="register_error_missing_first_name">Your first name is missing. Please input it.</string>
    <string name="register_error_missing_last_name">Your last name is missing. Please input it.</string>
    <string name="register_error_missing_email_address">Your email address is missing. Please input it.</string>
    <string name="register_error_missing_phone">Your phone number is missing. Please input it.</string>
    <string name="register_error_missing_password">Your password is missing. Please input it.</string>
    <string name="register_error_missing_retyped_password">Your retyped password is missing. Please input it.</string>
    <string name="register_error_password_not_matched">Your passwords do not match. Please check again.</string>
    <string name="register_error_invalid_password">Password must have at least 6 characters.</string>
    <string name="register_error_invalid_email">Your email address is not valid.</string>
    <string name="register_error_invalid_phone">Your phone number is not valid.</string>
    <string name="register_error_internal_server">We are sorry. The server encountered an internal error. Please try again later.</string>
    <string name="register_error_phone_duplicated">You phone number was used before. Please enter the new one.</string>
    <string name="register_error_something">Something error. Please try again later.</string>
    <string name="register_success_logged">Successfully registered and logged in</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!--Categories-->
    <string name="category_bed_bath"><![CDATA[Bed & Bath]]></string>
    <string name="category_decor"><![CDATA[Decor]]></string>
    <string name="category_kitchen"><![CDATA[Kitchen]]></string>
    <string name="category_appliances"><![CDATA[Appliances]]></string>
    <string name="category_furniture"><![CDATA[Furniture]]></string>
    <string name="category_home_improvement"><![CDATA[Home\nImprovement]]></string>
    <string name="category_lighting"><![CDATA[Lighting]]></string>
    <string name="category_storage_Organization"><![CDATA[Storage & Organization]]></string>

    <string name="feature_more"><![CDATA[More >]]></string>

    <string name="error_network_not_connected">Network error. Please check your internet again.</string>

    <string name="message_loading">Please wait for loading...</string>

    <string name="booking_service_read_tandt"><![CDATA[READ OUR BOOKING T&C]]></string>
    <string name="booking_service_read_scheduling_FAQ"><![CDATA[READ OUR SCHEDULING FAQ]]></string>

</resources>
