<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_menu1">
        <item
            android:id="@+id/navItemHome"
            android:checked="true"
            android:icon="@mipmap/drawer_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/navItemWishlist"
            android:checked="true"
            android:icon="@mipmap/drawer_wishlist"
            android:title="@string/drawer_wishlist" />
        <item
            android:id="@+id/navItemMyPurchase"
            android:checked="true"
            android:icon="@mipmap/drawer_my_purchase"
            android:title="@string/drawer_my_purchase" />
        <item
            android:id="@+id/navItemCustomerService"
            android:checked="true"
            android:icon="@mipmap/drawer_customer_service"
            android:title="@string/drawer_customer_service" />
        <item
            android:id="@+id/navItemSettings"
            android:checked="true"
            android:icon="@mipmap/drawer_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/navItemFootsteps"
            android:checked="true"
            android:icon="@mipmap/drawer_footsteps"
            android:title="@string/drawer_footsteps" />

    </group>
    <group android:id="@+id/group_menu2">
        <item
            android:id="@+id/navItemLogin"
            android:checked="true"
            android:icon="@mipmap/drawer_login"
            android:title="@string/drawer_login" />
    </group>
</menu>