<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.appyhome.appyproduct.mvvm.ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.appyhome.appyproduct.mvvm.ui.login.LoginViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_bg">
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="108dp"
                android:src="@mipmap/appyhome_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/userImageView"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/logoImageView"
                android:layout_marginTop="54dp"
                android:src="@mipmap/login_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/userImageView"
                android:layout_marginTop="68dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/login_dialog_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="14dp"
                    android:layout_width="200dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPhoneNumber"
                            android:textStyle="italic|bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:background="@drawable/input_text_rounded_bg"
                            android:cursorVisible="true"
                            android:gravity="center_vertical"
                            android:hint="Mobile No"
                            android:inputType="phone"
                            android:maxLength="50"
                            android:paddingBottom="4dp"
                            android:textColorHint="@color/hint_text"
                            android:paddingTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etEmail"
                            android:textStyle="italic|bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:background="@drawable/input_text_rounded_bg"
                            android:cursorVisible="true"
                            android:gravity="center_vertical"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="4dp"
                            android:textColorHint="@color/hint_text"
                            android:paddingTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:textColorHint="@color/hint_text"
                            android:textStyle="italic|bold"
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:background="@drawable/input_text_rounded_bg"
                            android:cursorVisible="true"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:inputType="textVisiblePassword"
                            android:maxLength="50"
                            android:paddingBottom="4dp"
                            android:paddingTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>
                    <Button
                        android:background="@null"
                        android:id="@+id/btnForgetPassword"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="12dp"
                        android:layout_marginTop="2dp"
                        android:text="Forgot password"
                        android:textSize="8dp" />
                    <Button
                        android:id="@+id/btnServerLogin"
                        style="@style/ImageButton.Primary"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="@{() -> viewModel.onServerLoginClick()}"
                        android:text="@string/login"
                        android:textSize="10dp" />

                    <Button
                        android:background="@null"
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="16dp"
                        android:layout_marginTop="4dp"
                        android:text="Do you have an account? Sign up"
                        android:textSize="8dp" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>